--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 services:
   capybara:
     environment:
-      ROOT: "gemini://fuwn.space" # Required
+      ROOT: "gemini://fuwn.me" # Required
       # BIND: ":8080" # Optional
       # CSS: "style.css" # Optional
       # CSS_EXTERNAL: "https://distrotube.com/css/style.css" # Optional
