feat(#2): optionally, do not proxy url(s)
If the user provides a `Capybara.yaml` with the `capybara.keep_gemini`
key, do not proxy the provided values (URLs).

Also implements a rudimentary configuration system for future extension.

Thanks, @WellsBit!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,6 @@ services:
       # CSS_EXTERNAL: "https://distrotube.com/css/style.css" # Optional
     ports:
       - "8080:8080"
+    volumes:
+      - ./.capybara-data/:/app/.capybara/
     image: fuwn/capybara
