feat: keep exact url from config

--- a/Capybara.yaml
+++ b/Capybara.yaml
@@ -1,6 +1,10 @@
 capybara:
-  keep_gemini: # A list of hosts where if the host is present; the URL will not be proxied
-    - fuwn.me  #
-               # Example:
-               #   Proxied: `gemini://gem.rest` becomes `/proxy/gem.rest`
-               #   Not proxied (present in `capybara.keep_gemini`): `gemini://gem.rest` is kept
+  keep_gemini:    # A list of hosts where if the host is present; the URL will not be proxied
+    - distro.tube #
+                  # Example:
+                  #   Proxied: `gemini://gem.rest` becomes `/proxy/gem.rest`
+                  #   Not proxied (present in `capybara.keep_gemini`): `gemini://gem.rest` is kept
+
+  keep_gemini_exact: # A list of URLs where if the URL is present; the URL will not be proxied
+    - fuwn.me/skills #
+                     # Similar to `keep_gemini` except only keeps exact URLs
